@@ -971,48 +971,35 @@ static void dQueryCTLPotentialCollisionTriangles(OBBCollider &Collider,
                                                  sCylinderTrimeshColliderData &cData, dxGeom *Cylinder, dxTriMesh *Trimesh,
                                                  OBBCache &BoxCache)
 {
+    Matrix4x4 MeshMatrix;
+    const dVector3 vZeroVector3 = { REAL(0.0), };
+    MakeMatrix(vZeroVector3, cData.m_mTrimeshRot, MeshMatrix);
+
     const dVector3 &vCylinderPos = cData.m_vCylinderPos;
-
-    Point cCenter(vCylinderPos[0],vCylinderPos[1],vCylinderPos[2]);
-
-    Point cExtents(cData.m_fCylinderRadius,cData.m_fCylinderRadius,cData.m_fCylinderRadius);
-    cExtents[nCYLINDER_AXIS] = cData.m_fCylinderSize * REAL(0.5);
-
-    Matrix3x3 obbRot;
-
     const dMatrix3 &mCylinderRot = cData.m_mCylinderRot;
 
-    // It is a potential issue to explicitly cast to float 
-    // if custom width floating point type is introduced in OPCODE.
-    // It is necessary to make a typedef and cast to it
-    // (e.g. typedef float opc_float;)
-    // However I'm not sure in what header it should be added.
+    dVector3 vCylinderOffsetPos;
+    dSubtractVectors3(vCylinderOffsetPos, vCylinderPos, cData.m_vTrimeshPos);
 
-    obbRot[0][0] = /*(float)*/mCylinderRot[0];
-    obbRot[1][0] = /*(float)*/mCylinderRot[1];
-    obbRot[2][0] = /*(float)*/mCylinderRot[2];
+    const dReal fCylinderRadius = cData.m_fCylinderRadius, fCylinderHalfAxis = cData.m_fCylinderSize * REAL(0.5);
 
-    obbRot[0][1] = /*(float)*/mCylinderRot[4];
-    obbRot[1][1] = /*(float)*/mCylinderRot[5];
-    obbRot[2][1] = /*(float)*/mCylinderRot[6];
-
-    obbRot[0][2] = /*(float)*/mCylinderRot[8];
-    obbRot[1][2] = /*(float)*/mCylinderRot[9];
-    obbRot[2][2] = /*(float)*/mCylinderRot[10];
-
-    OBB obbCapsule(cCenter,cExtents,obbRot);
-
-    Matrix4x4 CapsuleMatrix;
-    MakeMatrix(vCylinderPos, mCylinderRot, CapsuleMatrix);
-
-    Matrix4x4 MeshMatrix;
-    MakeMatrix(cData.m_vTrimeshPos, cData.m_mTrimeshRot, MeshMatrix);
+    OBB obbCylinder;
+    obbCylinder.mCenter.Set(vCylinderOffsetPos[0], vCylinderOffsetPos[1], vCylinderOffsetPos[2]);
+    obbCylinder.mExtents.Set(
+        0 == nCYLINDER_AXIS ? fCylinderHalfAxis : fCylinderRadius,
+        1 == nCYLINDER_AXIS ? fCylinderHalfAxis : fCylinderRadius,
+        2 == nCYLINDER_AXIS ? fCylinderHalfAxis : fCylinderRadius);
+    obbCylinder.mRot.Set(
+        mCylinderRot[0], mCylinderRot[4], mCylinderRot[8],
+        mCylinderRot[1], mCylinderRot[5], mCylinderRot[9],
+        mCylinderRot[2], mCylinderRot[6], mCylinderRot[10]);
 
     // TC results
     if (Trimesh->doBoxTC) 
     {
         dxTriMesh::BoxTC* BoxTC = 0;
-        for (int i = 0; i < Trimesh->BoxTCCache.size(); i++)
+        const int iBoxCacheSize = Trimesh->BoxTCCache.size();
+        for (int i = 0; i != iBoxCacheSize; i++)
         {
             if (Trimesh->BoxTCCache[i].Geom == Cylinder)
             {
@@ -1031,12 +1018,12 @@ static void dQueryCTLPotentialCollisionTriangles(OBBCollider &Collider,
 
         // Intersect
         Collider.SetTemporalCoherence(true);
-        Collider.Collide(*BoxTC, obbCapsule, Trimesh->Data->BVTree, null, &MeshMatrix);
+        Collider.Collide(*BoxTC, obbCylinder, Trimesh->Data->BVTree, null, &MeshMatrix);
     }
     else 
     {
         Collider.SetTemporalCoherence(false);
-        Collider.Collide(BoxCache, obbCapsule, Trimesh->Data->BVTree, null,&MeshMatrix);
+        Collider.Collide(BoxCache, obbCylinder, Trimesh->Data->BVTree, null, &MeshMatrix);
     }
 }
 
